k8s-manifests/networking/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rxpulse-routes
  namespace: rxpulse-dev
  labels:
    app.kubernetes.io/part-of: rxpulse
    app.kubernetes.io/managed-by: kubectl
    environment: dev
spec:
  parentRefs:
    - name: rxpulse-gateway
      namespace: rxpulse-dev

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/users/
      backendRefs:
        - name: user-service
          port: 3001

    - matches:
        - path:
            type: PathPrefix
            value: /api/catalog/
      backendRefs:
        - name: catalog-service
          port: 3002

    - matches:
        - path:
            type: PathPrefix
            value: /api/inventory/
      backendRefs:
        - name: inventory-service
          port: 3003

    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: frontend-active
          port: 80
