k8s-manifests/networking/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-frontend-to-mongo
  namespace: rxpulse-dev
  labels:
    app.kubernetes.io/part-of: rxpulse
    app.kubernetes.io/managed-by: kubectl
    environment: dev
spec:
  podSelector:
    matchExpressions:
      - key: app
        operator: In
        values:
          - mongo-user
          - mongo-catalog
          - mongo-inventory

  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: user-service

    - from:
        - podSelector:
            matchExpressions:
              - key: app
                operator: In
                values:
                  - catalog-service
                  - catalog-seed

    - from:
        - podSelector:
            matchExpressions:
              - key: app
                operator: In
                values:
                  - inventory-service
                  - inventory-seed
